[gd_scene load_steps=2 format=3 uid="uid://crfgc7butkacm"]

[ext_resource type="Script" path="res://components/damage_area_component.gd" id="1_rpan8"]

[node name="DamageAreaComponent" type="Area2D"]
script = ExtResource("1_rpan8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
